syntax = "proto3";

package api;
option go_package = "../internal/server;server";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message Bike {
    string id = 1;
    string modelName = 2; 
    float weight = 3;
    float pricePerHour = 4;
}

service Service {
    rpc ListBikes(google.protobuf.Empty) returns (ListBikesResponse) {
        option (google.api.http) = {
            get: "/bikes"
        };
    };
    rpc GetBike(GetBikeRequest) returns (Bike) {
        option (google.api.http) = {
            get: "/bikes/{id=*}"
        };
    };
    rpc CreateBike(CreateBikeRequest) returns (Bike) {
        option (google.api.http) = {
            post: "/bikes"
            body: "bike"
        };
    };
    rpc DeleteBike(DeleteBikeRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/bikes/{id=*}"
        };
    };
}

message ListBikesResponse {
    repeated Bike bikes = 1;
}

message GetBikeRequest {
    string id = 1;
}

message CreateBikeRequest {
    Bike bike = 1;
}

message DeleteBikeRequest {
    string id = 1;
}
